--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
   },
   "type": "module",
   "dependencies": {
+    "@thetechtrap/dgit": "git+https://github.com/TheTechTrap/dgit-cli.git",
+    "arweave": "^1.9.1",
     "cids": "^0.5.7",
     "debug": "^4.1.1",
     "fs-extra": "^7.0.1",
